--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+<script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'bike-primary':'#E76F51',
+            'bike-primary-bg':'rgba(231, 111, 81, 0.1)',
+          }
+        }
+      }
+    }
+  </script>
+
+<!-- Common CSS -->
 <style>
     .font-poppins{
         font-family: "Poppins", system-ui;
@@ -16,6 +30,134 @@
 </style>
 </head>
 <body class="font-poppins">
+    <!-- Header Section -->
+    <header class="md:container mx-auto mt-12">
+        <div class="navbar bg-base-100">
+            <div class="flex-1">
+              <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M4 6h16M4 12h8m-8 6h16" />
+                  </svg>
+                </div>
+                <ul
+                  tabindex="0"
+                  class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                  <li><a>Item 1</a></li>
+                  <li><a>Item 3</a></li>
+                
+              </div>
+              <a class="btn btn-ghost text-xl ">Bike Dekho</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+              <ul class="menu menu-horizontal px-1">
+                <li><a>HOme</a></li>
+                <li><a>Shop</a></li>
+                <li><a>News</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <div class="">
+              <a class="btn bg-bike-primary text-white hover:text-black">Button</a>
+            </div>
+          </div>
+
+    <!-- Hero/Banner Section -->
+          <section class="mt-12 bg-bike-primary-bg rounded lg:p-24 p-10 mx-auto">
+            <div class="carousel w-full"> 
+                <div id="slide1" class="carousel-item relative w-full">
+                  <!-- First Slider -->
+                    <div class="md:flex items-center   ">
+                        <!-- text content -->
+                    <div class="md:flex-1 ">
+                        <h2 class="font-bold text-6xl mb-5">Ride-on R15 V4 with Smile</h2>
+                        <p class="font-light mb-7">Amet minim mollit non deserunt ullamco 
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary text-white hover:text-black ">Purchase</button>
+                    </div>
+                    <!-- Image Content -->
+                    <div  class="md:flex-1">
+                        <img
+                    src="./images/slider/bike1.png"
+                    class="max-w-[408px] maz-h-[343px] " />
+                    </div>
+                  </div>
+                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                  </div>
+                </div>
+                <!--  Second Slider -->
+                <div id="slide2" class="carousel-item relative w-full">
+                    <div class="md:flex items-center   ">
+                        <!-- text content -->
+                    <div class="md:flex-1 ">
+                        <h2 class="font-bold text-6xl mb-5">Ride-on R15 V4 with Smile</h2>
+                        <p class="font-light mb-7">Amet minim mollit non deserunt ullamco 
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary text-white hover:text-black ">Purchase</button>
+                    </div>
+                    <!-- Image Content -->
+                    <div  class="md:flex-1">
+                        <img
+                    src="./images/slider/bike2.png"
+                    class="max-w-[408px] maz-h-[343px] " />
+                    </div>
+                  </div>
+                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                  </div>
+                </div>
+                <!-- Third Slider -->
+                <div id="slide3" class="carousel-item relative w-full">
+                    <div class="md:flex items-center   ">
+                        <!-- text content -->
+                    <div class="md:flex-1 ">
+                        <h2 class="font-bold text-6xl mb-5">Ride-on R15 V4 with Smile</h2>
+                        <p class="font-light mb-7">Amet minim mollit non deserunt ullamco 
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary text-white hover:text-black ">Purchase</button>
+                    </div>
+                    <!-- Image Content -->
+                    <div  class="md:flex-1">
+                        <img
+                    src="./images/slider/bike3.png"
+                    class="max-w-[408px] maz-h-[343px] " />
+                    </div>
+                  </div>
+                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                  </div>
+                </div>
+                
+              </div>
+          </section>
+    </header>
+
+    <main class="md:container mx-auto mt-40">
+        <!-- Featured Bikes Section -->
+         <section class="text-center mx-auto">
+            <h2 class="font-semibold text-5xl mb-5">Fetured Bikes In This Year</h2>
+            <p class="text-bike-primary mb-12">Best bike collection</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 md:mx-auto pl-7 gap-32 justify-between ">
+                <div><img src="images/others/feature-bike.png" alt=""></div>
+                <div><img src="images/others/feature-bike.png" alt=""></div>
+                <div><img src="images/others/feature-bike.png" alt=""></div>
+            </div>
+         </section>
+
+    </main>
 
 
 
