--- a/index.html
+++ b/index.html
@@ -214,6 +214,91 @@
             
           </section>
 
+          <!--  Happy Clients Section -->
+          <section class="mt-32 ">
+            <h2 class="text-center mb-12 font-semibold text-5xl">Happy <span class="text-bike-primary">Clients Says</span></h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-between gap-5 pl-5">
+                <div class="card gap-x-0 bg-base-100 w-96 shadow-[0px_0px_4px_0px_rgba(0,0,0,0.15)]">
+                    <figure>
+                      <img class="mt-4 mb-0 px-8 py-10 "
+                        src="images/others/user-1.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5 text-center">
+                      <p class="flex-grow-0">Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year</p>
+                        <div class="rating mt-0 mx-auto">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input
+                              type="radio"
+                              name="rating-2"
+                              class="mask mask-star-2 bg-orange-400"
+                              checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                          </div>
+                          <p class="font-semibold text-[#23A6F0]">Regina Miles</p>
+                          <p class="font-semibold">Banker</p>
+                    </div>
+                  </div>
+                <div class="card gap-x-0 bg-base-100 w-96 shadow-[0px_0px_4px_0px_rgba(0,0,0,0.15)]">
+                    <figure>
+                      <img class="mt-4 mb-0 px-8 py-10 "
+                        src="images/others/user-2.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5 text-center">
+                      <p class="flex-grow-0">Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year</p>
+                        <div class="rating mt-0 mx-auto">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input
+                              type="radio"
+                              name="rating-2"
+                              class="mask mask-star-2 bg-orange-400"
+                              checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                          </div>
+                          <p class="font-semibold text-[#23A6F0]">Regina Miles</p>
+                          <p class="font-semibold">Banker</p>
+                    </div>
+                  </div>
+                <div class="card gap-x-0 bg-base-100 w-96 shadow-[0px_0px_4px_0px_rgba(0,0,0,0.15)]">
+                    <figure>
+                      <img class="mt-4 mb-0 px-8 py-10 "
+                        src="images/others/user-3.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5 text-center">
+                      <p class="flex-grow-0">Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year</p>
+                        <div class="rating mt-0 mx-auto">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input
+                              type="radio"
+                              name="rating-2"
+                              class="mask mask-star-2 bg-orange-400"
+                              checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                          </div>
+                          <p class="font-semibold text-[#23A6F0]">Regina Miles</p>
+                          <p class="font-semibold">Banker</p>
+                    </div>
+                  </div>
+            </div>
+          </section>
+
     </main>
 
 
